fixed footer overlap with body content

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,11 @@
 
 html {
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
+}
+
+body {
+  padding-bottom: 85px;
 }
 
 /* Add a black background color to the top navigation */
